avoids hover messages overlap progress bar

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2503,6 +2503,7 @@ $budget-custom: #5A6175 !important;
 }
 
 .progress-votes {
+  z-index: 3;
 
   .progress {
     background: #212033;
